# pong-opengl

./: CMakeLists.txt
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
src/: CMakeLists.txt  main.cpp  sourcelist.cmake
